django/django_orm/users_assignment/users shell text.txt
(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py makemigrations
Migrations for 'users_app':
  users_app\migrations\0001_initial.py
    - Create model Users

(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, users_app
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying sessions.0001_initial... OK
  Applying users_app.0001_initial... OK

(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py shell
Python 3.8.8 (tags/v3.8.8:024d805, Feb 19 2021, 13:18:16) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from users_app.models import *
>>> Users.objects.create(first_name="Belina",last_name="Belortaja",email_adress="belinabelortaja@yahoo.com",age=30)
<Users: Users object (1)>
>>> Users.objects.create(first_name="Najada",last_name="Kambo",email_adress="najadakambo@xxx.xx",age=24)
<Users: Users object (2)>
>>> Users.objects.create(first_name="Jonida",last_name="yyyy",email_adress="jonida@zz.y",age=26)
<Users: Users object (3)>
>>> Users.objects.all()
<QuerySet [<Users: Users object (1)>, <Users: Users object (2)>, <Users: Users object (3)>]>
>>> Users.objects.first()
<Users: Users object (1)>
>>> Users.objects.last()
<Users: Users object (3)>
>>> Users.objects.filter(id=3)
<QuerySet [<Users: Users object (3)>]>
>>> lastname=Users.objects.get(id=3)
>>> lastname.last_name="Pancakes"
>>> lastname.save()
>>> Users.objects.last().__dict__
{'_state': <django.db.models.base.ModelState object at 0x000001C71BDB9520>, 'id': 3, 'first_name': 'Jonida', 'last_name': 'Pancakes', 'email_adress': 'jonida@zz.y', 'age': 26, 'created_at': datetime.datetime(2021, 4, 14, 16, 49, 28, 718702, tzinfo=<UTC>), 'updated_at': datetime.datetime(2021, 4, 14, 16, 53, 44, 690239, tzinfo=<UTC>)}
>>> del=Users.objects.get(id=2)
  File "<console>", line 1
    del=Users.objects.get(id=2)
       ^
SyntaxError: invalid syntax
>>> del = Users.objects.get(id=2)
  File "<console>", line 1
    del = Users.objects.get(id=2)
        ^
SyntaxError: invalid syntax
>>> deleting=Users.objects.get(id=2)
>>> deleting.delete()
(1, {'users_app.Users': 1})
>>> Users.objects.all().__dict__
{'model': <class 'users_app.models.Users'>, '_db': None, '_hints': {}, 'query': <django.db.models.sql.query.Query object at 0x000001C71BDB9520>, '_result_cache': None, '_sticky_filter': False, '_for_write': False, '_prefetch_related_lookups': (), '_prefetch_done': False, '_known_related_objects': {}, '_iterable_class': <class 'django.db.models.query.ModelIterable'>, '_fields': None}
>>> Users.objects.filter(first_name)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'first_name' is not defined
>>> exit()

(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py makemigrations
No changes detected

(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, users_app
Running migrations:
  No migrations to apply.

(my_enviroment) C:\Users\User\Desktop\python-stack\django\django_orm\users_assignment\singel_model_orm>python manage.py shell
Python 3.8.8 (tags/v3.8.8:024d805, Feb 19 2021, 13:18:16) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from users_app.models import Users
>>> Users.objects.first()
First name: Belina
>>> Users.objects.last()
First name: Jonida
>>> Users.objects.all()
<QuerySet [First name: Belina, First name: Jonida]>
>>> Users.objects.all().order_by("-first_name")
<QuerySet [First name: Jonida, First name: Belina]>
>>>